# hypergraph

./: CMakeLists.txt  CMakeLists.yaml-cpp.txt.in  Makefile  README.md  hypergraph-uninstalled.pc.in  hypergraph.pc.in
include/: CommonConceptGraph.hpp  CommonConceptGraph.tpp  Conceptgraph.hpp  Conceptgraph.tpp  Fact.hpp  Hyperedge.hpp  Hyperedge.tpp  HyperedgeYAML.hpp  Hypergraph.hpp  Hypergraph.tpp  HypergraphDB.hpp  HypergraphYAML.hpp  Individual.hpp  Relation.hpp  Set.hpp  Set.tpp  SetSystem.hpp
src/: CMakeLists.txt  CommonConceptGraph.cpp  Conceptgraph.cpp  Fact.cpp  Hyperedge.cpp  Hypergraph.cpp  HypergraphDB.cpp  HypergraphYAML.cpp  Individual.cpp  Relation.cpp  Set.cpp  SetSystem.cpp
test/: CMakeLists.txt  testCommonConceptGraph.cpp  testConceptgraph.cpp  testHyperedge.cpp  testHypergraph.cpp  testHypergraphDB.cpp  testMap.cpp  testSetSystem.cpp
tools/: CMakeLists.txt  merge.cpp  query.cpp  simplify.cpp
